# kote_final

./: dub.json  dub.selections.json  kote.db  meson.build
.cache/: kote.db
.cache/clangd/index/: smtp.c.0DA7B6FFD1B6F49E.idx  smtp.h.48EA5E63DFD40AE2.idx  sqlite3.c.BF3DB893D547D6E4.idx
resource/: manager_window.xml  meson.build  profile_window.xml
resource/r/: r.d
source/: app.d  defines.d  meson.build
source/db/: description.d  helper.d  schema.d  shared_database.d  uda.d
source/gui/: window.d
source/gui/dialogs/: async_task_dialog.d  login_dialog.d  row_dialog.d  signup_dialog.d  support_dialog.d
source/gui/pages/: events.d  nomenclatures.d  payments.d  stations.d  users.d
source/gui/widgets/: color_scheme_button.d  data_page.d  date_picker.d  phone_entry.d  table_widget.d  time_picker.d
